--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,5 +1,11 @@
-<% provide(:title, 'Home') %>
-<h1>Ditermini</h1>
-<p>
-  Ditermini home page. 
-</p>
+<div class="center hero-unit">
+  <h1>Get Ready to Ditermini</h1>
+
+  <h2>
+    This is the home page for the Ditermini application.
+  </h2>
+
+  <%= link_to "Sign up now!", '#', class: "btn btn-large btn-primary" %>
+</div>
+
+<%= link_to image_tag("rails.png", alt: "Rails"), 'http://rubyonrails.org/' %>
