Does basic css, static pages, and routes

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,5 +1,5 @@
 <div class="center hero-unit">
-  <h1>Get Ready to Ditermini</h1>
+  <h1>Ready. Set. Ditermini.</h1>
 
   <h2>
     This is the home page for the Ditermini application.
