All the pieces for photo upload, feed, index, creation and deletion in place. Model for photos/relationships created

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -8,4 +8,14 @@
       </h1>
     </section>
   </aside>
+  <div class="span8">
+    <% if @user.photos.any? %>
+      <h3>Photos (<%= @user.photos.count %>)</h3>
+      <ol class="microposts"> <!-- NEED TO CHANGE THIS CSS -->
+        <%= render @photos %>
+      </ol>
+      <%= will_paginate @photos %>
+    <% end %>
+  </div>
+
 </div>
