Add user following and feed SQL

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -5,7 +5,10 @@
         <%= render 'shared/user_info' %>
       </section>
       <section>
-        <%= render 'shared/micropost_form' %>
+        <%= render 'shared/follow_stats' %>
+      </section>
+      <section>
+        <%= render 'shared/photo_form' %>
       </section>
     </aside>
     <div class="span8">
