--- a/app/views/photos/_photo.html.erb
+++ b/app/views/photos/_photo.html.erb
@@ -1,5 +1,6 @@
 <li>
   <span class="content">
+  	<!--image_tag(gravatar_url, alt: user.name, class: "gravatar") -->
   	<img src='<%= photo.filename %>'/>
   </span>
   <span class="timestamp">
