Completely functional notifications. Display, notify on action. Possible extensions: read vs unread flag, better links after notify

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -8,6 +8,9 @@
         <%= render 'shared/follow_stats' %>
       </section>
       <section>
+        <%= render 'shared/notification_stats' %>
+      </section>
+      <section>
         <%= render 'shared/photo_form' %>
       </section>
     </aside>
