--- a/app/views/shared/_photo_form.html.erb
+++ b/app/views/shared/_photo_form.html.erb
@@ -3,6 +3,9 @@
   <div class="field">
     <%= f.text_field :caption, placeholder: "Compose a caption" %>
   </div>
-  <%= f.file_field(:image) %>
+  <div class="field">
+  	<%= f.label :image %><br />
+  	<%= f.file_field :image %>
+  </div>
   <%= f.submit "Upload", class: "btn btn-large btn-primary" %>
 <% end %>
