--- a/app/views/shared/_photo_form.html.erb
+++ b/app/views/shared/_photo_form.html.erb
@@ -6,6 +6,33 @@
   <div class="field">
   	<%= f.label :image %><br />
   	<%= f.file_field :image %>
+  	<%= f.hidden_field :lat %>
+  	<%= f.hidden_field :lng %>
   </div>
   <%= f.submit "Upload", class: "btn btn-large btn-primary" %>
 <% end %>
+<script>
+
+$(document).ready(function() {
+
+  function success(position) {
+    var lat = position.coords.latitude;
+    var lng = position.coords.longitude;
+    document.getElementById('photo_lat').value = lat;
+    document.getElementById('photo_lng').value = lng;
+  }
+
+  function error(msg) {
+    var errMsg = typeof msg == 'string' ? msg : "Geolocation failed";
+    $('#msg').html(errMsg);
+  }
+
+  if (navigator.geolocation) {
+      navigator.geolocation.getCurrentPosition(success, error);
+  } else {
+      error('Geolocation not supported');
+  }
+
+});
+
+</script>
