made a lot of jquery changes

--- a/app/views/notifications/_notification.html.erb
+++ b/app/views/notifications/_notification.html.erb
@@ -1,5 +1,11 @@
+<div data-role="content">
+<div class="choice_list">
+<ul>
 <li>
   <%= gravatar_for notification.notifier, size: 52 %>
   <%= link_to notification.notifier.name, notification.notifier %>
   <div><%= notification.message %></div>
 </li>
+</ul>
+</div>
+</div>
