--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,5 +1,7 @@
 <% if signed_in? %>
-  <div class="row-fluid">
+  <%=render 'shared/photo_form' %> 
+  <%if false %>
+    <div class="row-fluid">
     <aside class="span4">
       <section>
         <%= render 'shared/user_info' %>
@@ -18,7 +20,8 @@
       <h3>Feed</h3>
       <%= render 'shared/feed' %>
     </div>
-  </div>  
+  </div> 
+  <%end%> 
 <% else %>
 <div class="center hero-unit">
   <h1>Ready. Set. Ditermini.</h1>
