--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -1,3 +1,5 @@
+
+ <ul data-role='listview' data-inset='true'>
 <li>
   <%= gravatar_for user, size: 52 %>
   <%= link_to user.name, user %>
@@ -5,3 +7,4 @@
     	  | <%= link_to "delete", user, method: :delete, data: { confirm: "You sure?" } %>
 	<% end %>
 </li>
+</ul>
