--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,8 +1,7 @@
 <% provide(:title, 'Sign up') %>
 <h1>Sign up</h1>
-
-<div class="row">
-  <div class="span6 offset3">
+<div data-role=content">
+<div data-role='fieldcontain'>
     <%= form_for(@user) do |f| %>
       <%= render 'shared/error_messages', object: f.object %>
 
@@ -21,4 +20,6 @@
       <%= f.submit "Create my account", class: "btn btn-large btn-primary" %>
     <% end %>
   </div>
+</div>
+</div>
 </div>
