--- a/app/views/photos/new.html.erb
+++ b/app/views/photos/new.html.erb
@@ -1,6 +1,6 @@
 <% if signed_in? %>
+<div data-role='content'>
   <div class="row-fluid">
-    <div class="span8">
       <h3>Upload Photo!</h3>
       <section>
         <%= render 'shared/photo_form' %>
