jquery signin works, as does switching with the tab bar

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -24,7 +24,7 @@
         <li><a href="/users" id="explore" data-icon="custom"></a></li>
         <li><a href="/photos/new" id="upload" data-icon="custom"></a></li>
         <li><a href=<%= "/users/" + current_user.id.to_s + "/notifiers" %> id="notifications" data-icon="custom"></a></li>
-        <li><a href=<%= "/users/" + current_user.id.to_s %> method="get" id="my-closet" data-icon="custom"></a></li>
+        <li><a href=<%= "/users/" + current_user.id.to_s %> id="my-closet" data-icon="custom"></a></li>
       </ul>
     </div>
   </div><!-- /navbar_footer -->
