--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,6 +1,6 @@
 <% provide(:title, 'Sign up') %>
 <h1>Sign up</h1>
-<div data-role=content">
+<div data-role="content">
 <div data-role='fieldcontain'>
     <%= form_for(@user) do |f| %>
       <%= render 'shared/error_messages', object: f.object %>
