show tab bar only if signed in

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,3 +1,4 @@
+<% if signed_in? %>
 <nav>
   <div data-role="footer" data-id="samebar" class="nav-bar" data-position="fixed" data-tap-toggle="false">
     <div data-role="navbar" class="nav-bar" >
@@ -11,3 +12,4 @@
     </div>
   </div><!-- /navbar_footer -->
 </nav>
+<% end %>
