--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -17,7 +17,8 @@
       <%= f.label :password_confirmation, "Confirmation" %>
       <%= f.password_field :password_confirmation %>
 
-      <%= f.submit "Create my account", class: "btn btn-large btn-primary" %>
+      <%#= f.submit "Create my account", class: "btn btn-large btn-primary" %>
+      <button name="commit" type="submit">Create my account</button>
     <% end %>
   </div>
 </div>
