some buttons work some dont

--- a/app/views/shared/_feed.html.erb
+++ b/app/views/shared/_feed.html.erb
@@ -4,10 +4,11 @@
   </ol>
   <%= will_paginate @feed_items %>
 <script type="text/javascript">
-	$(".button").bind("bind", function (event, ui) {
+	$("button").bind("click", function (event, ui) {
+		console.log("button clicked");
 		var photoId;
 		var voteYes;
-		var id = event.id;
+		var id = event.srcElement.id;
 		var parent = event.parentNode;
 		if (id.substring(0, 2) == "no") {
 			photoId = id.substring(2);
@@ -17,7 +18,9 @@
 			voteYes = 1;
 		}
 		$.post("user/vote", {"photoId": photoId, "voteYes": voteYes}, function (data) {
-			$(id).parent.html(data);
+			console.log(data);
+			console.log($("#"+id).parent().html());
+			$("#"+id).parent().parent().html(data);
 		});
 	});
 </script>
