--- a/app/views/shared/_feed_item.html.erb
+++ b/app/views/shared/_feed_item.html.erb
@@ -13,7 +13,9 @@
   </span>
   <div class="ui-grid-a">
     <div class="ui-block-a"><button id="yes<%= feed_item.id %>" type="button" style="background:Green">YES : <%= feed_item.votes_for%> </button></div>
-    <div class="ui-block-b"><button id="no<%= feed_item.id %>" type="button" style="background:Red" >NO : <%= feed_item.votes_against %></button></div>    
+    <div class="ui-block-b"><button id="no<%= feed_item.id %>" type="button" style="background:Red" >NO : <%= feed_item.votes_against %></button></div> 
+    <!-- <div class="ui-block-a"><a id="yes<%= feed_item.id %>" data-role="button" style="background:Green">YES : <%= feed_item.votes_for%> </a></div>
+    <div class="ui-block-b"><a id="no<%= feed_item.id %>" data-role="button" style="background:Red" >NO : <%= feed_item.votes_against %></a></div>   -->  
   </div>
 
   <% if current_user?(feed_item.user) %>
