--- a/app/views/shared/_feed.html.erb
+++ b/app/views/shared/_feed.html.erb
@@ -19,11 +19,16 @@
 		}
 		$.post("user/vote", {"photoId": photoId, "voteYes": voteYes}, function (data) {
 			console.log(data);
-			console.log($("#"+id).parent().html());
-			$("span > span", $("#yes"+data.photo_id).parent()).html("YES: " + data.yes);
-			$("span > span", $("#no"+data.photo_id).parent()).html("NO: " + data.no);
-			console.log($("#yes"+data.photo_id).html());
-			console.log($("#no"+data.photo_id).html());
+			$("span > span", $("#yes"+data.photo_id).parent()).html("YES : " + data.yes);
+			$("span > span", $("#no"+data.photo_id).parent()).html("NO : " + data.no);
+			console.log($("#yes"+data.photo_id));
+			if(data.voted_for) {
+				$("#yes"+data.photo_id).css('background-color', 'Blue');
+				$("#no"+data.photo_id).css('background-color', 'Red');
+			} else {
+				$("#yes"+data.photo_id).css('background-color', 'Green');
+				$("#no"+data.photo_id).css('background-color', 'Blue');
+			}
 		});
 	});
 </script>
