--- a/app/views/photos/_photo.html.erb
+++ b/app/views/photos/_photo.html.erb
@@ -11,8 +11,8 @@
   <% else %>
     <% if current_user.voted_on?(photo) %>
       <div class="ui-grid-a">
-        <div class="ui-block-a"><button id="yes<%= photo.id %>" type="button" style="background:Green">YES : <%= photo.votes_for%> </button></div>
-        <div class="ui-block-b"><button id="no<%= photo.id %>" type="button" style="background:Red" >NO : <%= photo.votes_against %></button></div>
+        <div class="ui-block-a"><button id="yes<%= photo.id %>" type="button" style="<%= (current_user.voted_for?(photo)) ? "background:Blue" : "background:Green"%>">YES : <%= photo.votes_for%> </button></div>
+        <div class="ui-block-b"><button id="no<%= photo.id %>" type="button" style="<%= (current_user.voted_against?(photo)) ? "background:Blue" : "background:Red"%>" >NO : <%= photo.votes_against %></button></div>
       </div>
     <% else %>
       <div class="ui-grid-a">
@@ -39,11 +39,15 @@
     }
     $.post("<%= url_for(:action => 'vote', :controller => 'users') %>", {"photoId": photoId, "voteYes": voteYes}, function (data) {
       console.log(data);
-      console.log($("#"+id).parent().html());
       $("span > span", $("#yes"+data.photo_id).parent()).html("YES : " + data.yes);
       $("span > span", $("#no"+data.photo_id).parent()).html("NO : " + data.no);
-      console.log($("#yes"+data.photo_id).html());
-      console.log($("#no"+data.photo_id).html());
+      if(data.voted_for) {
+        $("#yes"+data.photo_id).css('background-color', 'Blue');
+        $("#no"+data.photo_id).css('background-color', 'Red');
+      } else {
+        $("#yes"+data.photo_id).css('background-color', 'Green');
+        $("#no"+data.photo_id).css('background-color', 'Blue');
+      }
     });
   });
 </script>
