--- a/app/views/shared/_photo_form.html.erb
+++ b/app/views/shared/_photo_form.html.erb
@@ -9,7 +9,7 @@
   	<%= f.hidden_field :lat %>
   	<%= f.hidden_field :lng %>
   </div>
-  <%= f.submit "Upload", class: "btn btn-large btn-primary" %>
+  <%= f.submit "Upload", "document.getElementById('new_photo').submit();", class: "btn btn-large btn-primary" %>
 <% end %>
 <script>
 
