follow unfollow works

--- a/app/views/users/_follow.html.erb
+++ b/app/views/users/_follow.html.erb
@@ -1,9 +1,8 @@
 <div data-role="content">
-<div data-role="fieldcontain">
-<%= form_for(current_user.relationships.build(followed_id: @user.id), remote: true) do |f| %>
+<%= form_for(current_user.relationships.build(followed_id: @user.id),
+             remote: true, :html => {"data-ajax" =>"false"}) do |f| %>
   <div><%= f.hidden_field :followed_id %></div>
-
-  <div> <%= f.submit "Follow", class: "btn btn-large btn-primary" %>
+  <%#= f.submit "Follow", class: "btn btn-large btn-primary" %>
+  <button name="commit" type='submit'>Follow </button>
 <% end %>
-</div>
 </div>
