--- a/app/views/users/_unfollow.html.erb
+++ b/app/views/users/_unfollow.html.erb
@@ -1,3 +1,8 @@
-<%= form_for(current_user.relationships.find_by_followed_id(@user), html: { method: :delete }, remote: true) do |f| %>
-  <%= f.submit "Unfollow", class: "btn btn-large" %>
+<div data-role="content">
+<%= form_for(current_user.relationships.find_by_followed_id(@user),
+             html: { method: :delete, "data-ajax" =>"false" },
+             remote: true) do |f| %>
+  <%#= f.submit "Unfollow", class: "btn btn-large" %>
+  <button name="commit" type='submit' >Unfollow </button>
 <% end %>
+</div>
