--- a/app/views/photos/_photo.html.erb
+++ b/app/views/photos/_photo.html.erb
@@ -7,7 +7,7 @@
     Posted <%= time_ago_in_words(photo.created_at) %> ago.
   </span>
   <% if current_user?(photo.user) %>
-    <%= link_to "delete", photo, method: :delete, data: { confirm: "You sure?" }, title: photo.filename %>
+    <%= link_to "delete", photo, method: :delete, data: { confirm: "You sure?" }, title: photo.image.filename %>
   <% else %>
     <% if current_user.voted_on?(photo) %>
       <div class="ui-grid-a">
