--- a/app/views/shared/_feed_item.html.erb
+++ b/app/views/shared/_feed_item.html.erb
@@ -26,6 +26,6 @@
   <% if current_user?(feed_item.user) %>
     <%= link_to "delete", feed_item, method: :delete,
                                      data: { confirm: "You sure?" },
-                                     title: feed_item.filename %>
+                                     title: feed_item.image_file_name %>
   <% end %>
 </li>
