--- a/app/views/photos/_photo.html.erb
+++ b/app/views/photos/_photo.html.erb
@@ -9,7 +9,7 @@
   <% if current_user?(photo.user) %>
     <%= link_to "delete", photo, method: :delete, data: { confirm: "You sure?" }, title: photo.image_file_name %>
   <% else %>
-    <% if current_user.voted_on?(photo) %>
+    <% if current_user.voted_on?(photo) or current_user?(photo.user) %>
       <div class="ui-grid-a">
         <div class="ui-block-a"><button id="yes<%= photo.id %>" type="button" style="<%= (current_user.voted_for?(photo)) ? "background:Blue" : "background:Green"%>">YES : <%= photo.votes_for%> </button></div>
         <div class="ui-block-b"><button id="no<%= photo.id %>" type="button" style="<%= (current_user.voted_against?(photo)) ? "background:Blue" : "background:Red"%>" >NO : <%= photo.votes_against %></button></div>
