--- a/app/views/shared/_feed_item.html.erb
+++ b/app/views/shared/_feed_item.html.erb
@@ -11,7 +11,7 @@
   <span class="timestamp">
     Posted <%= time_ago_in_words(feed_item.created_at) %> ago.
   </span>
-  <% if current_user.voted_on?(feed_item) %>
+  <% if current_user.voted_on?(feed_item) or current_user?(feed_item.user) %>
     <div class="ui-grid-a">
       <div class="ui-block-a"><button id="yes<%= feed_item.id %>" type="button" style="<%= (current_user.voted_for?(feed_item)) ? "background:Blue" : "background:Green"%>">YES : <%= feed_item.votes_for%> </button></div>
       <div class="ui-block-b"><button id="no<%= feed_item.id %>" type="button" style="<%= (current_user.voted_against?(feed_item)) ? "background:Blue" : "background:Red"%>" >NO : <%= feed_item.votes_against %></button></div>
