--- a/app/views/photos/show.html.erb
+++ b/app/views/photos/show.html.erb
@@ -30,7 +30,11 @@
   		<% end %>
     </section>
     <section>
-    	<!-- PUT CODE FOR THE SENDING HERE -->
+    	<%= form_tag(controller: "sms", action: "send_text_message", method: "post") do %>
+    		<%= label_tag("To:") %>
+    		<%= telephone_field(:to_number) %>
+    		<button name="commit" type="submit">Send To Contact</button>
+    	<% end %>
    	</section>
 </div>
 
