--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -3,8 +3,10 @@
 <li>
   <%= gravatar_for user, size: 52 %>
   <%= link_to user.name, user %>
+  <% if  false %> <!-- COMMENTED OUT FOR USER TESTING ON OPTIMIZELY -->
   <% if current_user.admin? && !current_user?(user) %>
     	  | <%= link_to "delete", user, method: :delete, data: { confirm: "You sure?" } %>
 	<% end %>
+  <% end %>
 </li>
 </ul>
