changed title of friends view

--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -1,3 +1,4 @@
+<% provide(:title, 'Find your friends') %>
 <div> <input type='text' id="completionMenu"/> </div>
 <div id='matchingUsers'></div> 
  <ul data-role='listview' data-inset='true'>
