added optimizely snippet

--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -1,3 +1,4 @@
+<script src="//cdn.optimizely.com/js/141411332.js"></script>
 <% provide(:title, 'Find your friends') %>
 <div> <input type='text' id="completionMenu"/> </div>
 <div id='matchingUsers'></div> 
