added optimizely script

--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -1,4 +1,5 @@
 <% provide(:title, 'Find your friends') %>
+<script src="//cdn.optimizely.com/js/141411332.js"></script>
 <div> <input type='text' id="completionMenu"/> </div>
 <div id='matchingUsers'></div> 
  <ul data-role='listview' data-inset='true'>
