--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,10 +1,9 @@
-<% provide(:title, 'All users') %>
-<h1>All users</h1>
-
-<%= will_paginate %>
+<% provide(:title, 'Find Your Friends') %>
+<h1>Find Your Friends </h1>
 
 <ul class="users">
+        <div> <input type='text' id="completionMenu"/> </div>
+	<div id='matchingUsers'></div> 
+
 	<%= render @users %>
 </ul>
-
-<%= will_paginate %>
