added details to all users

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,6 +1,7 @@
+
 <% provide(:title, 'Find Your Friends') %>
 <h1>Find Your Friends </h1>
-
+<%= will_paginate %>
 <ul class="users">
         <div> <input type='text' id="completionMenu"/> </div>
 	<div id='matchingUsers'></div> 
