--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,10 +4,11 @@
     <title><%= full_title(yield(:title)) %></title>
 
     <%= stylesheet_link_tag    "application", media: "all" %>
-    <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js" />
+    <link rel="stylesheet" href="http://code.jquery.com/mobile/1.2.0/jquery.mobile-1.2.0.min.css" />
 
     <%= javascript_include_tag "application" %>
     <script src="http://code.jquery.com/jquery-1.8.2.min.js"></script>
+    <scritp src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
     <script src="http://code.jquery.com/mobile/1.2.0/jquery.mobile-1.2.0.min.js"></script>
 
     <meta charset="utf-8">
