--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <%= csrf_meta_tags %>
-
+    <script src="//cdn.optimizely.com/js/141411332.js"></script>
     <%= render 'layouts/shim' %>    
   </head>
 
