--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -1,4 +1,4 @@
-
+<script src="//cdn.optimizely.com/js/141411332.js"></script>
  <ul data-role='listview' data-inset='true'>
 <li>
   <%= gravatar_for user, size: 52 %>
