--- a/app/views/shared/_feed.html.erb
+++ b/app/views/shared/_feed.html.erb
@@ -32,4 +32,10 @@
 		});
 	});
 </script>
+  <% else %>
+  <br/>
+  <br/>
+  <h4> You have no items in your Following Feed </h4> 
+  <br/> 
+  <div data-role="button"> <%= link_to "Click here to Find Friends to Follow!", "/users"%>  </div>
 <% end %>
