--- a/app/views/users/show_notifications.html.erb
+++ b/app/views/users/show_notifications.html.erb
@@ -15,6 +15,11 @@
       <ul class="users" data-role='listview' data-inset='true'>
         <%= render @notifications %>
       </ul>
-    <% end %>
+    <% else %>
+    <br/>
+    <br/>
+     <h4 style='text-align:center'> You do not have any notifications at this time. </h4> 
+     <div data-role="button"> <%= link_to "Click here to Find users to Follow!", "/users" %> </div> 
+  <% end%> 
   </div>
 </div>
