--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -17,9 +17,9 @@
         <%= render @photos %>
       </ol>
       <%= will_paginate @photos %>
-     <%else %>
+    <%elsif @user==current_user%>
     <br/> 
-    <h4> You have not yet uploaded any image. </h4>
+    <h4> You have not yet uploaded an image. </h4>
    <br/> 
   <div data-role="button"> <%= link_to "Click here to Upload a New Outift","/photos/new"%>    
   </div>
