--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,17 +2,20 @@
 <html>
   <head>
     <title><%= full_title(yield(:title)) %></title>
+    
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="http://code.jquery.com/mobile/1.2.0/jquery.mobile.structure-1.2.0.min.css" /> 
+  <script src="http://code.jquery.com/jquery-1.7.2.min.js"></script> 
+  <script src="http://code.jquery.com/mobile/1.2.0/jquery.mobile-1.2.0.min.js"></script> 
+
+</head>
+				
 
     <%= stylesheet_link_tag    "application", media: "all" %>
-    <link rel="stylesheet" href="http://code.jquery.com/mobile/1.2.0/jquery.mobile-1.2.0.min.css" />
 
     <%= javascript_include_tag "application" %>
-    <script src="http://code.jquery.com/jquery-1.8.2.min.js"></script>
-    <scritp src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
-    <script src="http://code.jquery.com/mobile/1.2.0/jquery.mobile-1.2.0.min.js"></script>
-
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    
     <%= csrf_meta_tags %>
     <script src="//cdn.optimizely.com/js/141411332.js"></script>
     <%= render 'layouts/shim' %>    
