--- a/app/views/static_pages/feed.html.erb
+++ b/app/views/static_pages/feed.html.erb
@@ -1,8 +1,6 @@
 <% if signed_in? %>
-  <!-- <div class="row-fluid"> -->
-    <!-- <div class="span8"> -->
+  <div class="row-fluid"> 
       <h3>Following Feed</h3>
       <%= render 'shared/feed' %>
-    <!-- </div> -->
-  <!-- </div>   -->
+  </div>  
 <% end %>
