--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -21,7 +21,7 @@
     <br/> 
     <h4> You have not yet uploaded an image. </h4>
    <br/> 
-  <div data-role="button"> <%= link_to "Click here to Upload a New Outift","/photos/new"%>    
+  <div data-role="button"> <a href="/photos/new" style="color:black"> Upload an Outift! </a>    
   </div>
 </div>
 <%end%>
