--- a/app/views/shared/_notification_stats.html.erb
+++ b/app/views/shared/_notification_stats.html.erb
@@ -1,6 +1,6 @@
 <!--<% if @user == current_user %>-->
 <div class="stats" data-role='button' data-inline="true">
- <a href="<%= notifiers_user_path(@user) %>">
+ <a href="<%= notifiers_user_path(@user) %>"style="color:black">
     <strong  class="stat">
       <%= @user.notifiers.count %>
     </strong>
