--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,9 +2,9 @@
 <html>
   <head>
     <title><%= full_title(yield(:title)) %></title>
-    
+   <script src="//cdn.optimizely.com/js/141411332.js"></script>
   <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1">3
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="http://code.jquery.com/mobile/1.2.0/jquery.mobile.structure-1.2.0.min.css" /> 
   <script src="http://code.jquery.com/jquery-1.7.2.min.js"></script> 
   <script src="http://code.jquery.com/mobile/1.2.0/jquery.mobile-1.2.0.min.js"></script> 
@@ -17,15 +17,12 @@
     <%= javascript_include_tag "application" %>
     
     <%= csrf_meta_tags %>
-    <script src="//cdn.optimizely.com/js/141411332.js"></script>
+   
     <%= render 'layouts/shim' %>    
   </head>
 
   <body>
 
-    <% if false %> <!-- ORIGINAL BOOTSTRAP WAY -->
-    <%= render 'layouts/header' %>
-    <% end %>
 
     <!--<div class="container"> ORIGINAL BOOTSTRAP CONTAINER-->
     <div data-role="page"> 
