--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -11,6 +11,9 @@
       <%= f.label :email %>
       <%= f.email_field :email %>
 
+      <%= f.label :phone_number, "Phone Number" %>
+      <%= f.phone_field :phone_number %>
+
       <%= f.label :password %>
       <%= f.password_field :password %>
 
