--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -11,6 +11,13 @@
     var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
   })();
 
+  	//<![CDATA[
+	var processResponse=function (responseText,divname){
+  	this.elem=document.getElementById(divname);
+  	this.elem.innerHTML=responseText;
+	}
+	new filter("completionMenu", "/user/findUsers", "substring", processResponse, "matchingUsers");
+	//]]>
 </script>
 
 <% provide(:title, 'Find Your Friends') %>
