added styling to pages

--- a/app/views/shared/_feed.html.erb
+++ b/app/views/shared/_feed.html.erb
@@ -35,5 +35,5 @@
   <% else %>
 <h3> You do not have any items on your feed. </h3>
      <h3 style="margin:20px"><div data-role="button"> <%= link_to "Click here to Find users to Follow!", "/users" %> </div> </h3>
-     <p style="text-align:center"><img src= "images/buddy.jpg" class ="noImage"/></p>
+     <p style="text-align:center"><img src= "/images/buddy.jpg"  style=" opacity :0.2;"/></p>
 <% end %>
