--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -58,6 +58,15 @@ h3 {
   font-weight: normal;
 }
 
+
+h4 {
+  font-size: 1.7em;
+  letter-spacing: -1px;
+  margin-bottom: 30px;
+  text-align: center;
+  font-weight: normal;
+}
+
 p {
   font-size: 1.1em;
   line-height: 1.7em;
@@ -251,7 +260,7 @@ aside {
 }
 
 .no-image{
- align:center
+ align:center;
  }
  
  .filter{
