--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,11 +1,14 @@
 <% provide(:title, "Edit user") %> 
 <h1>Update your profile</h1>
 
-<div class="row">
-  <div class="span6 offset3">
+<div style="margin:5px">
     <%= form_for(@user) do |f| %>
       <%= render 'shared/error_messages', object: f.object %>
-
+	   
+	  <div> <%= gravatar_for @user %>
+       <a href="http://gravatar.com/emails">Click Here to Change Picture </a></div>
+       
+       <br/><br/>
       <%= f.label :name %>
       <%= f.text_field :name %>
 
@@ -21,10 +24,7 @@
       <%= f.label :password_confirmation, "Confirm Password" %>
       <%= f.password_field :password_confirmation %>
 
-      <%= f.submit "Save changes", class: "btn btn-large btn-primary" %>
+      <%= f.submit "Save changes" %>
     <% end %>
 
-    <%= gravatar_for @user %>
-    <a href="http://gravatar.com/emails">change</a>
-  </div>
 </div>
