--- a/app/views/photos/show.html.erb
+++ b/app/views/photos/show.html.erb
@@ -33,14 +33,42 @@
   		<% end %>
     </section>
     <section>
+      <div> <input type='text' id="completionMenu" placeholder="Search for people"/> </div>
+      <div id='matchingUsers'></div>
+      <%= form_tag("#", :id => "addcontact", :remote => true, :data => {"ajax" =>"false"}) do %>
+        <%= label_tag("To:") %>
+        <%= telephone_field(:to, :number, placeholder: "Enter a phone number", name: "number") %>
+        <button name="add" type="submit">Add Contact</button>
+      <% end %>
     	<%= form_tag(controller: "sms", action: "send_text_message", method: "post") do %>
     		<%= label_tag("To:") %>
     		<%= hidden_field_tag(:photo_id, @photo.id) %>
+        <%= hidden_field_tag(:send_to) %>
     		<%= telephone_field(:to, :number, placeholder: "Enter a phone number") %>
     		<button name="commit" type="submit">Send To Contact</button>
     	<% end %>
    	</section>
 </div>
+
+<script type="text/javascript">
+
+  $("#addcontact").submit(function(e){
+    e.preventDefault();
+    var newValue = document.getElementById("send_to").value + e.srcElement.number.value;
+    console.log(newValue);
+    document.getElementById("send_to").value = newValue;
+    e.srcElement.number.value = "";
+  });
+
+  //<![CDATA[
+  var processResponse= function (responseText,divname) {
+    this.elem=document.getElementById(divname);
+    this.elem.innerHTML=responseText;
+  }
+
+  new filter("completionMenu", "/user/findUsers", "forsms=1&substring", processResponse, "matchingUsers");
+  //]]>
+</script>
 
 <script type="text/javascript">
   $("button").bind("click", function (event, ui) {
