adding hidden to upload

--- a/app/views/photos/new.html.erb
+++ b/app/views/photos/new.html.erb
@@ -3,6 +3,7 @@
   <div class="row-fluid">
       <h1>Upload Photo!</h1>
       <section>
+        <img src="images/noImage.png" id="hidden"/>
         <%= render 'shared/photo_form' %>
       </section>
     </div>
