made contacts plural on send text button

--- a/app/views/photos/show.html.erb
+++ b/app/views/photos/show.html.erb
@@ -46,7 +46,7 @@
         <p>Sending to:</p>
         <p id="sendingtolist"></p>
         <%= hidden_field_tag(:send_to) %>
-    		<button name="commit" type="submit">Send To Contact</button>
+    		<button name="commit" type="submit">Send To Contacts</button>
     	<% end %>
    	</section>
 </div>
