--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -8,6 +8,6 @@
     Night out? Big presentation? Stuck in the fitting room? </br> Figure out what looks best on you and help others decide what works for them.
   </h2>
 
-  <%= link_to "Sign up now!", signup_path, class: "btn btn-large btn-primary" %>
+  <div data-role="button" style="color:black; font-size:30px"> <%= link_to "Sign up now!", "/following" %> </div>
 </div>
 <% end %>
