--- a/app/views/static_pages/feed.html.erb
+++ b/app/views/static_pages/feed.html.erb
@@ -1,3 +1,4 @@
+<script src="//cdn.optimizely.com/js/141411332.js"></script>
 <% if signed_in? %>
   <div class="row-fluid"> 
       <h1>Following Feed</h3>
