--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,3 +1,4 @@
+<script src="//cdn.optimizely.com/js/141411332.js"></script>
 <h1> <% provide(:title, @user.name) %> </h1>
 <div data-role='content'>
     <section>
